@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-03T00:42:20Z",
+  "timestamp" : "2022-07-03T16:08:54Z",
   "count_outdated" : 1683,
   "uniques_outdated" : 104,
-  "count" : 1700,
-  "uniques" : 107,
+  "count" : 1701,
+  "uniques" : 108,
   "views" : [
     {
       "timestamp": "2022-06-19T00:00:00Z",
@@ -23,6 +23,13 @@
       "timestamp": "2022-06-28T00:00:00Z",
       "count": 5,
       "count_minmax": [ 5, 5 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
