@@ -1,5 +1,5 @@
 {
-  "count": 17,
+  "count": 18,
   "uniques": 1,
   "views": [
     {
@@ -15,6 +15,11 @@
     {
       "timestamp": "2022-06-28T00:00:00Z",
       "count": 5,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-03T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
